--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,18 @@
-<md-sidenav-container class="main">
-    <md-sidenav class ='main--sidenav' #sidenav [mode]="'over'">
-        <app-logo></app-logo>
-        <md-list>
-            <md-list-item md-raised-button
-                    class='main--sidenavItem'
-                    *ngFor="let item of routes"
-                    (click)="goTo(item.path)"
-                    routerLinkActive="active">{{item.name}}</md-list-item>
-            <md-list-item class='main--sidenavItem' md-raised-button (click)="logout()">Logout</md-list-item>
-        </md-list>
-    </md-sidenav>
-    <md-toolbar style="background-color: #008ca9">
-        <a class="menu" style="color: white" (click)="sidenav.toggle()"><i class="material-icons">menu</i></a>
-        <h2 class="title">{{title}}</h2>
-    </md-toolbar>
-
-    <router-outlet></router-outlet>
-</md-sidenav-container>
+<div [class.example-is-mobile]="mobileQuery.matches">
+    <mat-toolbar color="primary" style="background-color: #008ca9">
+      <button class="menu" mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    </mat-toolbar>
+  
+    <mat-sidenav-container class="main">
+      <mat-sidenav class ='main--sidenav' #snav [mode]='over'
+                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+        <mat-nav-list>
+          <a mat-list-item class='main--sidenavItem' routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+        </mat-nav-list>
+      </mat-sidenav>
+  
+      <mat-sidenav-content>
+        <p *ngFor="let content of fillerContent">{{content}}</p>
+      </mat-sidenav-content>
+    </mat-sidenav-container>
+  </div>
