--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -60,3 +60,8 @@
     cursor: pointer;
     background-color: transparent;
   }
+
+  .create-ad {
+      background: white;
+      margin-left: auto;
+  }
