--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <div [class.example-is-mobile]="mobileQuery.matches">
     <mat-toolbar color="primary" style="background-color: #008ca9">
       <button class="menu" mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+      <button mat-button class="create-ad">Create ad</button>
     </mat-toolbar>
 
     <mat-sidenav-container class="main">
       <mat-sidenav class ='main--sidenav' #snav [mode]='over'
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-          <a mat-list-item class='main--sidenavItem' routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+          <a mat-list-item class='main--sidenavItem' routerLink="." *ngFor="let nav of navItems">{{nav}}</a>
         </mat-nav-list>
       </mat-sidenav>
 
