Fixes with topics

--- a/src/app/topics/topics.component.html
+++ b/src/app/topics/topics.component.html
@@ -1,6 +1,6 @@
 <div class="topics-wrapper">
 
-  <div class="topic-wrapper" *ngFor="let topic of topics" (click)="onTopicClick(topic.name)">
+  <div class="topic-wrapper" *ngFor="let topic of topics" (click)="onTopicClick(topic)">
 
     <span>{{ topic.name }}</span>
 
