--- a/src/app/topics/topics.component.html
+++ b/src/app/topics/topics.component.html
@@ -1,9 +1,14 @@
 <div class="topics-wrapper">
 
-  <div class="topic-wrapper" *ngFor="let topic of topics" (click)="onTopicClick(topic)">
+  <div  class="topic" *ngFor="let topic of topics; let i = index;">
 
-    <span>{{ topic.name }}</span>
-
+    <div class="topic-wrapper" (click)="onTopicClick(i)">
+      <span>{{ topic.name }}</span>
+      <button mat-button (click)="onCreateClick(topic)">Create Ad</button>
+    </div>
+    <div class="description" *ngIf="topicsChecked[i].checked">
+      {{ topic!.description }}
+    </div>
   </div>
 
 
