--- a/src/app/topics/topics.component.scss
+++ b/src/app/topics/topics.component.scss
@@ -2,13 +2,29 @@
   padding: 50px;
 }
 
+.topic {
+  margin-bottom: 10px;
+}
+
 .topic-wrapper {
   background-color: #eee;
-  padding: 20px 15px;
-  margin: 10px 0;
+  padding: 10px 15px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  button {
+    margin-left: auto;
+  }
 
   &:hover {
-    background-color: darken(#eee, 10%);
+    background-color: darken(#eee, 1%);
   }
 }
+
+.description {
+  background-color: #f7f7f7;
+  padding: 20px 15px;
+}
+
+
