add photo upload design and profit display

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,3 +1,8 @@
-<p>
-  Your profit: {{profit}}
-</p>
+<div class="profit-block">
+  <i class="material-icons profit">monetization_on</i>
+  <div>Your profit: {{profit}}</div> 
+</div>
+<div class="upload-block">
+    <i class="material-icons upload-photo">assignment_returned</i>
+    <button mat-button>Upload photo</button>   
+</div> 
