--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div [class.example-is-mobile]="mobileQuery.matches">
-    <mat-toolbar color="primary" style="background-color: #008ca9">
+    <mat-toolbar color="primary" style="background-color: #00BCD4">
       <button class="menu" mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
       <button mat-button class="create-ad">Create ad</button>
     </mat-toolbar>
