--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -2,10 +2,5 @@
   <i class="material-icons profit">monetization_on</i>
   <div>Your profit: {{profit}}</div> 
 </div>
-<!-- <input type="file" name="file"> 
-<label for="file" class="upload-block" click="onUpload()">
-    <i class="material-icons upload-photo">assignment_returned</i>
-    <div mat-button>Upload photo</div>   
-</label> -->
 <label class="upload-block" for="file"><span><i class="material-icons upload-photo">assignment_returned</i><div class="upload-button">Upload photo</div></span></label>
-<input type="file" name="file" id="file" class="inputfile" />
+<input type="file" name="file" id="file" class="inputfile" (change)="onUpload($event)" />
