--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -4,6 +4,6 @@
 </div>
 <label class="upload-block" for="file"><span><i class="material-icons upload-photo">assignment_returned</i><div class="upload-button">Upload photo</div></span></label>
 <input type="file" name="file" id="file" class="inputfile" (change)="onUpload($event)" />
-<div class="image-preview">
-    <img *ngIf="imageUrl" [src]="imageUrl"/>  
+<div *ngIf="imageUrl" class="image-preview">
+    <img [src]="imageUrl"/>  
 </div>
