--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -2,6 +2,9 @@
   <i class="material-icons profit">monetization_on</i>
   <div>Your profit: {{profit}}</div> 
 </div>
+<div class="webflow-style-input">
+    <input placeholder="Your description">
+</div>
 <label class="upload-block" for="file"><span><i class="material-icons upload-photo">assignment_returned</i><div class="upload-button">Upload photo</div></span></label>
 <input type="file" name="file" id="file" class="inputfile" (change)="onUpload($event)" />
 <div *ngIf="imageUrl" class="image-preview">
