add desciption of ad

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -3,10 +3,10 @@
   <div>Your profit: {{profit}}</div> 
 </div>
 <div class="webflow-style-input">
-    <input placeholder="Your description">
+    <input [(ngModel)]="description" placeholder="Your description">
 </div>
 <label class="upload-block" for="file"><span><i class="material-icons upload-photo">assignment_returned</i><div class="upload-button">Upload photo</div></span></label>
-<input type="file" name="file" id="file" class="inputfile" (change)="onUpload($event)" />
+<input style="height: 0" type="file" name="file" id="file" class="inputfile" (change)="onUpload($event)" />
 <div *ngIf="imageUrl" class="image-preview">
     <img [src]="imageUrl"/>  
 </div>
