fix layout of main page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,12 @@
     outline-color: transparent;
 }
 
+.toolbar {
+  height: 10vh;
+}
+
 .main{
-    height: 100%;
+    height: 90vh;
   
     .title {
       text-transform: uppercase;
