--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,7 +31,7 @@
       color: #3b3b3b;
       font-size: 20px;
       height: 40px !important;
-      margin: 20px 0;
+      padding: 20px 0;
   
       &:after {
         width: 0;
@@ -44,6 +44,7 @@
       }
   
       &:hover {
+        background-color: transparent;
         &:after {
           width: 90%;
           transition: all 1s ease-in-out;
