remove narkomania behaviour from sidebar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,7 @@
       text-transform: uppercase;
       color: #3b3b3b;
       font-size: 20px;
+      background: transparent;
       height: 40px !important;
       padding: 20px 0;
   
