--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
       <mat-sidenav class ='main--sidenav' #snav [mode]='over'
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-          <a mat-list-item class='main--sidenavItem' [routerLink]="nav.link" *ngFor="let nav of navItems">{{nav.name}}</a>
-          <a mat-list-item class='main--sidenavItem' (click)="logout()">Logout</a>
+          <div mat-list-item class='main--sidenavItem' [routerLink]="nav.link" *ngFor="let nav of navItems">{{nav.name}}</div>
+          <div mat-list-item class='main--sidenavItem' (click)="logout()">Logout</div>
         </mat-nav-list>
       </mat-sidenav>
 
