--- a/src/app/moderator-page/moderator-page.component.scss
+++ b/src/app/moderator-page/moderator-page.component.scss
@@ -15,7 +15,7 @@ img {
   background-color: #eee;
   padding: 10px 15px;
   cursor: pointer;
-  display: flex;
+  display: block;
   align-items: center;
 
   button {
