--- a/src/app/my-ads/my-ads.component.scss
+++ b/src/app/my-ads/my-ads.component.scss
@@ -1,5 +1,5 @@
 img {
-  width: 350px;
+  width: 200px;
   height: auto;
 }
 
@@ -15,7 +15,7 @@ img {
   background-color: #eee;
   padding: 10px 15px;
   cursor: pointer;
-  display: flex;
+  display: block;
   align-items: center;
 
   button {
